[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "parade-of-planets"
version = "0.1.0"
description = "Parade of planets phase calculator"
requires-python = ">=3.12"

[project.scripts]
parade = "parade.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=parade --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
omit = ["parade/cli.py", "parade/__main__.py"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "RUF001",  # ambiguous unicode — en dashes are intentional in UI text
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
